# futurecommander

./: .dockerignore  .gitignore  AUTHORS  CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  Dockerfile  README.md  bitbucket-pipelines.yml  entrypoint.sh
futurecommander/: Cargo.toml
futurecommander/src/: main.rs
futurecommander_daemon/: Cargo.toml
futurecommander_daemon/src/: client.rs  context.rs  daemon.rs  errors.rs  lib.rs  main.rs  response.rs  router.rs  server.rs  tools.rs
futurecommander_daemon/src/message/: decoder.rs  directory_open.rs  directory_read.rs  encoder.rs  header.rs  message.rs  mod.rs
futurecommander_daemon/src/protocol/: header.rs  mod.rs  packet.rs
futurecommander_daemon/src/protocol/codec/: decoder.rs  encoder.rs
futurecommander_daemon/src/request/: create_file.rs  header.rs  list.rs  mod.rs
futurecommander_daemon/src/response/: entries.rs  error.rs  header.rs  mod.rs
futurecommander_filesystem/: Cargo.toml
futurecommander_filesystem/src/: capability.rs  container.rs  entry.rs  errors.rs  guard.rs  infrastructure.rs  kind.rs  lib.rs  operation.rs  port.rs  sample.rs
futurecommander_filesystem/src/0old_event/: copy.rs  create.rs  mod.rs  mov.rs  remove.rs  rnd.rs
futurecommander_filesystem/src/0old_event/capability/: capabilities.rs  guard.rs  mod.rs  registrar_guard [conflicted].rs
futurecommander_filesystem/src/0old_port/: atomic.rs  filesystem.rs
futurecommander_filesystem/src/entry/: adapter.rs  collection.rs  serializable.rs
futurecommander_filesystem/src/errors/: domain.rs  query.rs
futurecommander_filesystem/src/event/: copy.rs  create.rs  mod.rs  mov.rs  remove.rs  rnd.rs  serializable.rs
futurecommander_filesystem/src/event/capability/: capabilities.rs  guard.rs  mod.rs  registrar_guard.rs
futurecommander_filesystem/src/guard/: blind.rs  capabilities.rs  guard.rs  mod.rs  preset.rs  registrar_guard.rs  skip.rs  strategy.rs  zealous.rs
futurecommander_filesystem/src/infrastructure/: adapter.rs  errors.rs  real.rs  virt.rs
futurecommander_filesystem/src/infrastructure/real/: entry_path.rs  filesystem.rs  mod.rs  read.rs  write.rs
futurecommander_filesystem/src/infrastructure/virt/: entry_status.rs  filesystem.rs  read.rs  write.rs
futurecommander_filesystem/src/operation/: copy.rs  create.rs  generator.rs  mod.rs  mov.rs  operation.rs  remove.rs  scheduling.rs
futurecommander_filesystem/src/operation/copy/: generator (conflicted).rs  generator.rs  request.rs  scheduling.rs  strategy.rs
futurecommander_filesystem/src/operation/create/: generator.rs  request.rs  scheduling.rs  serializable_kind.rs  strategy.rs
futurecommander_filesystem/src/operation_old/: copy.rs  create.rs
futurecommander_filesystem/src/port/: atomic.rs  entry.rs  entry_collection.rs  filesystem.rs  mod.rs  operation.rs  serializable.rs
futurecommander_filesystem/tests/: container.rs
futurecommander_gui/: .gitignore  Cargo.toml  index.html  main.js  package.json
futurecommander_gui/app/: index.js
futurecommander_gui/app/filesystem/: actions.js  api.js  client.js  response.js  worker.js
futurecommander_gui/app_node/: main.js
futurecommander_gui/app_node/filesystem/: client.js  message.js  request.js  response.js  worker.js
futurecommander_gui/app_node/store/: action.js  provider.js  stub.json
futurecommander_gui/app_web/: action.js  behavior.js  index.html  index.js  middleware.js  mock.js
futurecommander_gui/app_web/application/: action.js  index.js  reducer.js
futurecommander_gui/app_web/common/: icon.js  mock.js  style.css
futurecommander_gui/app_web/entry/: action.js  component.js  index.js  state.js
futurecommander_gui/app_web/error_set/: component.js  index.js  state.js
futurecommander_gui/app_web/explorer/: action.js  index.js  reducer.js
futurecommander_gui/app_web/infrastructure/: action.js  action_adapter.js  middleware.js  provider.js
futurecommander_gui/app_web/layout/: action.js  component.js  index.js  state.js
futurecommander_gui/app_web/state/: entry.js  index.js  middleware.js
futurecommander_gui/app_web/view/: entry.js  index.js  layout.js
futurecommander_gui/lib/: index.html  index.js
futurecommander_gui/native/: Cargo.toml  artifacts.json  index.node
futurecommander_gui/native/src/: lib.rs
futurecommander_gui/node/: index.js
futurecommander_gui/node/filesystem/: client.js  request.js  worker.js
futurecommander_gui/node/web/: application.js  main.js
futurecommander_gui/src/: codec.rs  context.rs  errors.rs  lib.old.rs  lib.rs  message_delta.rs  utils.rs
futurecommander_proto/: Cargo.toml  build.rs
futurecommander_proto/proto/: vfs.proto
futurecommander_proto/src/: lib.rs  vfs.rs
futurecommander_protocol/: Cargo.toml
futurecommander_protocol/src/: errors.rs  header.rs  lib.rs  packet.rs
futurecommander_protocol/src/codec/: decoder.rs  encoder.rs  mod.rs
futurecommander_protocol/src/context/: container.rs  errors.rs  mod.rs  string.rs
futurecommander_protocol/src/message/: directory_create.rs  directory_open.rs  directory_read.rs  entry_copy.rs  entry_remove.rs  file_create.rs  message_error.rs  mod.rs  remove.rs
futurecommander_shell/: Cargo.toml
futurecommander_shell/src/: clap.yml  errors.rs  helper.rs  lib.rs  main.rs  shell.rs  tools.rs
futurecommander_shell/src/command/: copy.rs  errors.rs  guard.rs  import.rs  list.rs  mod.rs  mov.rs  new_directory.rs  new_file.rs  remove.rs  save.rs  tree.rs
futurecommander_shell/tests/: command.rs  shell_external.rs
futurecommander_tui/: Cargo.toml
futurecommander_tui/src/: components.rs  lib.rs  position.rs
src/shell/: Cargo.toml  clap.yml  helper.rs  lib.rs  path.rs  shell.rs  test.rs
src/shell/command/: apply.rs  command.rs  copy.rs  errors.rs  list.rs  mod.rs  mov.rs  new_directory.rs  new_file.rs  remove.rs  test.rs  tree.rs
src/shell/operation/: copy.rs  list.rs  mod.rs  mov.rs  new_directory.rs  new_file.rs  remove.rs
src/shell/src/: clap.yml  errors.rs  helper.rs  lib.rs  path.rs  shell.rs  tools.rs
src/shell/src/command/: copy.rs  (+11 more)
src/shell/tests/: command.rs  shell.rs  shell_external.rs
(+295 files in other folders)
