[package]
name = "futurecommander"
version = "0.2.5"
authors = ["François Cadeillan <francois@azsystem.fr>"]
edition = "2018"
license = "GPL-3.0-or-later"

[workspace]

[dependencies]
rustyline = "3.0.0"
clap = { version =  "2.32.0", features = ["yaml"] }
vfs = { package = "futurecommander_vfs", version = "0.2.5", path = "src/vfs" }

[lib]
name = "shell"
path = "src/shell/lib.rs"
