[package]
name = "futurecommander"
version = "0.4.0"
authors = ["François Cadeillan <francois@azsystem.fr>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
futurecommander_shell = { version = "0.4.0", path = "../futurecommander_shell" }
futurecommander_daemon = { version = "0.1.0", path = "../futurecommander_daemon" }
