[package]
name = "futurecommander_daemon"
version = "0.1.0"
authors = ["François Cadeillan <francois@azsystem.fr>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
tokio = "0.1.21"
futurecommander_filesystem = { version = "0.4.0", path = "../futurecommander_filesystem" }
bytes = "0.4.12"
byteorder = "1.3.1"
serde = { version = "1.0.90" }
typetag = { version = "0.1" }
bincode = "1.1.3"
