[package]
name = "futurecommander_daemon"
version = "0.1.0"
authors = ["François Cadeillan <francois@azsystem.fr>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
futurecommander_filesystem = { version = "0.4.0", path = "../futurecommander_filesystem" }
futurecommander_protocol = { version = "0.1.0", path = "../futurecommander_protocol" }
tokio = "0.1.21"
serde = { version = "1.0.90" }
