[package]
name = "futurecommander_gui"
version = "0.1.0"
authors = ["François Cadeillan <francois@azsystem.fr>"]
edition = "2018"

#[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
futurecommander_protocol = { version = "0.1.0", path = "../futurecommander_protocol" }
bytes = "0.4.12"
byteorder = "1.3.4"
serde = { version = "1.0.117" }
serde_json = { version = "1.0" }
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
