[package]
name = "futurecommander_proto"
version = "0.0.1"
authors = ["François Cadeillan <francois@azsystem.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = {version="0.3.1"}

[build-dependencies]
tonic-build = "0.2.0"

