[package]
name = "futurecommander_shell"
version = "0.4.1"
authors = ["François Cadeillan <francois@azsystem.fr>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
rustyline = "6.2.0"
clap = { version =  "2.32.0", features = ["yaml"] }
futurecommander_filesystem = { version = "0.4.1", path = "../futurecommander_filesystem" }
serde = { version = "1.0.145" }
typetag = { version = "0.1" }
